--- a/package.json
+++ b/package.json
@@ -12,16 +12,19 @@
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.18",
     "apexcharts": "^3.45.2",
+    "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "flatpickr": "^4.6.13",
+    "formik": "^2.4.6",
     "jsonwebtoken": "^9.0.2",
     "jsvectormap": "^1.6.0",
     "mongoose": "^7.4.0",
     "next": "^14.2.4",
     "react": "^18",
     "react-apexcharts": "^1.4.1",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
