--- a/.gitignore
+++ b/.gitignore
@@ -1,36 +1,33 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Dependencies
+/node_modules/
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
-.yarn/install-state.gz
+# Next.js build output
+.next/
+out/
 
-# testing
-/coverage
+# Production environment files
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# next.js
-/.next/
-/out/
+# Log files
+*.log
 
-# production
-/build
-
-# misc
+# OS-specific files
 .DS_Store
-*.pem
+Thumbs.db
 
-# debug
+# npm-debug.log (npm error logs)
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# local env files
-.env*.local
+# Optional: IDE-specific files (e.g., VS Code, JetBrains, etc.)
+.vscode/
+.idea/
 
-# vercel
-.vercel
-
-# typescript
-*.tsbuildinfo
-next-env.d.ts
+# Next.js export output
+/.next/
+/package-lock.json
