--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^18",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18",
+    "react-icons": "^5.5.0",
     "react-toastify": "^11.0.3",
     "uuid": "^11.0.5",
     "yup": "^1.6.1"
